WIP: refactoring master-terminal code generation